api/_lib/template.css
*,
::before,
::after {
  box-sizing: border-box;
  border-width: 0;
  border-style: solid;
  border-color: currentColor;
}

html,
body {
  background-color: white;
  line-height: 1;
  font-weight: 400;
  font-family: Times, "Times New Roman", serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

h1 {
  margin: 0;
  color: white;
  font-weight: 100;
  font-size: 14rem;
  font-family: Times, "Times New Roman", serif;
}

h2 {
  margin: 0;
  color: white;
  font-size: 5rem;
  font-weight: 100;
  font-family: Times, "Times New Roman", serif;
}

body {
  width: 100vw;
  height: 100vh;
  display: flex;
  text-align: center;
  align-items: center;
  justify-content: center;
}

.container {
  position: absolute;
  display: flex;
}

.purple {
  color: rgba(149, 122, 251);
}

.space-x-4 > :not([hidden]) ~ :not([hidden]) {
  margin-right: 1rem;
  margin-left: 1rem;
}

.img {
  background-position: center center;
  background-size: cover;
  background-color: rgb(204, 204, 204);
  background-repeat: no-repeat;
}

.img.lg {
  width: 850px;
  height: 850px;
}

.img.sm {
  width: 400px;
  height: 400px;
}

.profile {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.profile .header {
  margin-left: -9rem;
  margin-top: 2.5rem;
  width: fit-content;
}

.profile .header .text-bg {
  padding-left: 1rem;
  padding-right: 1rem;
  width: fit-content;
  background-color: rgba(31, 41, 55, 0.75);
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
}

.profile .header .text-bg.sm {
  padding-left: 0.25rem;
  padding-right: 0.25rem;
}

.profile .header .subtitle {
  display: flex;
  margin-top: 1rem;
  margin-left: 2rem;
}

.profile .gallery {
  display: flex;
}

